@@ -65,7 +65,7 @@ public class User {
     }
 
     public String getFullName() {
-        if (middleName == null || middleName.isBlank()) {
+        if (middleName == null || middleName.trim().isEmpty()) {
             return firstName + " " + lastName;
         }
         return firstName + " " + middleName + " " + lastName;
